--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Raleway', sans-serif;
 }
 
 .logo {
