--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -44,7 +44,7 @@
   font-weight: 700;
   margin-bottom: 1rem;
   line-height: 1.2;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Raleway', sans-serif;
 }
 
 .typewriter-cursor {
@@ -69,7 +69,7 @@
   font-size: 1.5rem;
   margin-bottom: 1rem;
   opacity: 1;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Raleway', sans-serif;
 }
 
 .hero-description {
@@ -77,7 +77,7 @@
   margin-bottom: 2rem;
   opacity: 1;
   line-height: 1.8;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Raleway', sans-serif;
 }
 
 .hero-buttons {
@@ -127,7 +127,7 @@
   color: white;
   margin-bottom: 1rem;
   opacity: 0.9;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Raleway', sans-serif;
 }
 
 .social-icons {
