--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background-image: url('/website.webp');
+  background-image: url('var(--base-path)/website.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
