--- a/frontend/src/pages/About.css
+++ b/frontend/src/pages/About.css
@@ -1,7 +1,7 @@
 .about {
   min-height: 100vh;
   position: relative;
-  background-image: url('var(--base-path)/proejcts.jpg');
+  /* Background image set via inline style in component */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
